[tool.poetry]
name = "serverlesstest"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
cryptography = "42.0.5"
aws-lambda-powertools = "2.32.0"
pyjwt = "2.8.0"
backoff = "2.2.1"
requests = "2.31.0"
requests-pkcs12 = "1.22"
bcrypt = "4.1.2"
redis = "4.5.5"
lumigo-tracer = "1.1.233"
cachetools = "5.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"
pytest-mock = "3.11.1"
pytest-freezegun = "0.4.2"
pytest-cov = "4.1.0"
taskipy = "1.12.0"

[tool.taskipy.tasks]
test = "./tests.sh"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"